k8/service2/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-service2-reto5
  namespace: reto5
spec:
  hosts:
    - api-service2-reto5
  http:
    - route:
        - destination:
            host: api-service2-reto5
            subset: v1
          weight: 100
